Alignment doesn't work for LinkButtons is web6 client #PL-4899 Fixed

--- a/modules/web6/themes/havana/components/button/button.scss
+++ b/modules/web6/themes/havana/components/button/button.scss
@@ -198,6 +198,7 @@ outline-offset: -3px;
     text-decoration: underline;
     color: #0066FF;
     text-align: left;
+    line-height: 25px;
 }
 
 .v-button-link .v-button-wrap {
