--- a/modules/web6/themes/havana/havana.scss
+++ b/modules/web6/themes/havana/havana.scss
@@ -896,6 +896,10 @@
   padding-left: 20px;
 }
 
+.cuba-generic-filter .filter-conditions .v-button-link img.v-icon {
+    margin-top: 4px;
+}
+
 textarea {
   resize: none;
 }
